# frankensim

./: AGENTS.md  CHANGELOG.md  CHANGELOG_RESEARCH.md  COMPREHENSIVE_ADDENDUM_TO_FRANKENSIM_PLAN.md  COMPREHENSIVE_PLAN_FOR_FRANKENSIM.md  COMPREHENSIVE_PLAN_TO_EXTEND_FRANKENSIM_TO_NEW_DOMAINS.md  Cargo.toml  README.md  capability-maturity.json  doc-facts-inventory.json  frankensim-source-manifest.json  frankensim-source-manifest.spdx.json  golden-couplings.json  identity-authorities.json  identity-schemas.json  proposed-manifest-fixture.json  rust-toolchain.toml  unsafe-capsules.json  vertical-capability-graph.json
.beads/: issues.jsonl
crates/fs-ad/: CONTRACT.md  Cargo.toml
crates/fs-ad/src/: dual.rs  lib.rs
crates/fs-adaptbo-e2e/: Cargo.toml
crates/fs-adaptbo-e2e/src/: lib.rs
crates/fs-adaptbo-e2e/tests/: adaptbo.rs
crates/fs-adjoint/: CONTRACT.md  Cargo.toml
crates/fs-adjoint/src/: certs.rs  dwr_accept.rs  explain.rs  hadamard.rs  lib.rs  mitigate.rs  transpose.rs  verify.rs
crates/fs-adjoint/tests/: adjoint_battery.rs  dwr_accept.rs  explain.rs
crates/fs-airflow/: CONTRACT.md  Cargo.toml
crates/fs-airflow/src/: lib.rs  qoi.rs
crates/fs-airflow/tests/: conformance.rs  qoi.rs
crates/fs-alloc/: CONTRACT.md  Cargo.toml
crates/fs-alloc/src/: arena.rs  lib.rs  pool.rs
crates/fs-alloc/tests/: conformance.rs
crates/fs-archive/: CONTRACT.md  Cargo.toml
crates/fs-archive/src/: lib.rs
crates/fs-archive/tests/: archive.rs  conformance.rs  cvt_archive_study_replay.rs  map_elites_study_replay.rs
crates/fs-asbuilt/: CONTRACT.md  Cargo.toml
crates/fs-asbuilt/src/: lib.rs  uncertainty.rs
crates/fs-asbuilt/tests/: asbuilt.rs  spatial_uncertainty.rs
crates/fs-ascent/: CONTRACT.md  Cargo.toml
crates/fs-ascent/src/: auglag.rs  interior.rs  lib.rs  pareto.rs  runner.rs  sqp.rs
crates/fs-ascent/tests/: ascent_battery.rs  bbob_budget_ledger.rs  budget_trend_manifest.rs  constrained_battery.rs  constrained_study_replay.rs  cutest_scale_battery.rs  frankenscipy_optimizer_oracle_casebook.rs  fsci_oracle.rs  gradient_budget_ledger.rs  lbfgs_study_replay.rs  pareto_battery.rs  pareto_study_replay.rs  riemannian_study_replay.rs  runner_battery.rs  runner_fork_battery.rs  strong_wolfe_study_replay.rs  trust_region_study_replay.rs  wfg_moo_battery.rs  zdt_moo_battery.rs
crates/fs-assimilate/: CONTRACT.md  Cargo.toml
crates/fs-assimilate/src/: lib.rs
crates/fs-assimilate/tests/: assimilate.rs
crates/fs-benchmark/: CONTRACT.md  Cargo.toml
crates/fs-benchmark/src/: lib.rs
crates/fs-benchmark/tests/: benchmark.rs
crates/fs-bisect/: CONTRACT.md  Cargo.toml
crates/fs-bisect/src/: compound.rs  lib.rs
crates/fs-bisect/tests/: bisect.rs  compound_battery.rs
crates/fs-blake3/: CONTRACT.md  Cargo.toml
crates/fs-blake3/src/: identity.rs  lib.rs
crates/fs-blake3/tests/: authority_promotion.rs  identity.rs
crates/fs-bo/: CONTRACT.md  Cargo.toml
crates/fs-bo/src/: acq.rs  acq_grad.rs  bo.rs  gp.rs  lib.rs  sparse.rs  turbo.rs
crates/fs-bo/tests/: bo_battery.rs  hetero_battery.rs  mf_study_replay.rs  qei_study_replay.rs  sparse_battery.rs  turbo_battery.rs
crates/fs-cheb/: CONTRACT.md  Cargo.toml
crates/fs-cheb/src/: budget.rs  cheb2.rs  colleague.rs  fourier.rs  lib.rs  orr_sommerfeld.rs
crates/fs-cheb/tests/: budget_battery.rs  dct_bridge_casebook.rs  os_battery.rs  variants.rs
crates/fs-checker/: CONTRACT.md  Cargo.toml
crates/fs-checker/src/: lib.rs  plugins.rs
crates/fs-checker/tests/: checker.rs  epi_e2e.rs  plugins.rs
crates/fs-cli/: CONTRACT.md  Cargo.toml
crates/fs-cli/src/: lib.rs  main.rs
crates/fs-cli/tests/: cli.rs  import.rs
crates/fs-contact/: CONTRACT.md  Cargo.toml
crates/fs-contact/src/: lib.rs
crates/fs-contact/tests/: contact.rs
crates/fs-contract/: CONTRACT.md  Cargo.toml
crates/fs-contract/src/: lib.rs
crates/fs-contract/tests/: contract.rs
crates/fs-crosswalk/: CONTRACT.md  Cargo.toml
crates/fs-crosswalk/src/: lib.rs
crates/fs-crosswalk/tests/: crosswalk.rs
crates/fs-dd/: CONTRACT.md  Cargo.toml
crates/fs-dd/src/: lib.rs
crates/fs-dd/tests/: bddc.rs
crates/fs-dfo/: CONTRACT.md  Cargo.toml
crates/fs-dfo/src/: cma.rs  lib.rs  moo.rs  neldermead.rs  ot.rs  steer.rs  wfg.rs
crates/fs-dfo/tests/: bipop_restart_ledger.rs  bipop_study_replay.rs  dfo_battery.rs  dro_battery.rs  dro_study_replay.rs  hv_archive_study_replay.rs  moead_study_replay.rs  moo_battery.rs  nsga2_study_replay.rs  nsga3_battery.rs  nsga3_study_replay.rs  ot_battery.rs  probe_tmp.rs  steer.rs  wfg4_battery.rs
crates/fs-diffreal-e2e/: CONTRACT.md  Cargo.toml
crates/fs-diffreal-e2e/src/: invocation.rs  lib.rs
crates/fs-diffreal-e2e/tests/: e2e.rs
crates/fs-dimine/: CONTRACT.md  Cargo.toml
crates/fs-dimine/src/: lib.rs
crates/fs-dimine/tests/: dimine.rs
crates/fs-dwr/: CONTRACT.md  Cargo.toml
crates/fs-dwr/src/: adapt.rs  aniso.rs  elasticity.rs  estimate.rs  lib.rs  mark.rs
crates/fs-dwr/tests/: battery.rs  elasticity.rs
crates/fs-epi-e2e/: CONTRACT.md  Cargo.toml
crates/fs-epi-e2e/src/: lib.rs
crates/fs-epi-e2e/tests/: e2e.rs
crates/fs-eproc/: CONTRACT.md  Cargo.toml
crates/fs-eproc/src/: hardening.rs  lib.rs
crates/fs-eproc/tests/: betting_eprocess_study_replay.rs  ebh_dependence.rs  gaussian_mixture_cs_replay.rs  hardening.rs
crates/fs-evidence/: CONTRACT.md  Cargo.toml
crates/fs-evidence/src/: action.rs  admitted.rs  balance.rs  color.rs  discrepancy.rs  falsify.rs  identity.rs  lib.rs  uncertainty.rs  vv.rs
crates/fs-evidence/tests/: action.rs  balance.rs  conformance.rs  falsify.rs  identity.rs  uncertainty.rs  vv.rs
crates/fs-exec/: CONTRACT.md  Cargo.toml
crates/fs-exec/src/: SAFETY.md  budget_accountant.rs  crew.rs  cx.rs  fault.rs  invocation.rs  kernel.rs  kill.rs  latency.rs  lib.rs  pool.rs  race.rs  reduce.rs  solver.rs  tune.rs
xtask/: Cargo.toml
xtask/src/: claim_integrity_gate.rs  claims.rs  critical_path.rs  depgraph.rs  identities.rs  main.rs  matdb_pack.rs  maturity.rs
xtask/tests/: interface_pack_cli.rs  interface_pack_seed_cli.rs  matdb_pack_cli.rs
(+987 files in other folders)
