[workspace]
resolver = "3"
members = [
    "crates/fs-dd",
    "crates/fs-flywheel-e2e",
    "crates/fs-qty",
    "crates/fs-obs",
    "crates/fs-opt",
    "crates/fs-constraint",
    "crates/fs-query",
    "crates/fs-geocon",
    "crates/fs-topo",
    "crates/fs-recompute",
    "crates/fs-verify",
    "crates/fs-evidence",
    "crates/fs-substrate",
    "crates/fs-soa",
    "crates/fs-feec",
    "crates/fs-tilelang",
    "crates/fs-opdsl",
    "crates/fs-solver",
    "crates/fs-adjoint",
    "crates/fs-ascent",
    "crates/fs-topopt",
    "crates/fs-bo",
    "crates/fs-uq",
    "crates/fs-tilelang-macros",
    "crates/fs-soa-derive",
    "crates/fs-time",
    "crates/fs-simd",
    "crates/fs-alloc",
    "crates/fs-dfo",
    "crates/fs-exec",
    "crates/fs-math",
    "crates/fs-la",
    "crates/fs-sparse",
    "crates/fs-cheb",
    "crates/fs-fft",
    "crates/fs-ivl",
    "crates/fs-rand",
    "crates/fs-ad",
    "crates/fs-eproc",
    "crates/fs-ledger",
    "crates/fs-ir",
    "crates/fs-plan",
    "crates/fs-xform",
    "crates/fs-img",
    "crates/fs-io",
    "crates/fs-roofline",
    "crates/fs-geom",
    "crates/fs-ga",
    "crates/fs-scenario",
    "crates/fs-regime",
    "crates/fs-material",
    "crates/fs-session",
    "crates/fs-rep-nurbs",
    "crates/fs-rep-sdf",
    "crates/fs-rep-voxel",
    "crates/fs-rep-mesh",
    "crates/fs-rep-frep",
    "crates/fs-mesh",
    "crates/fs-vskeleton",
    "crates/fs-iface",
    "crates/fs-ladder",
    "crates/fs-probe",
    "crates/fs-govern",
    "crates/fs-spececo",
    "crates/fs-contract",
    "crates/fs-bisect",
    "crates/fs-dimine",
    "crates/fs-package",
    "crates/fs-checker",
    "crates/fs-crosswalk",
    "crates/fs-spectral",
    "crates/fs-symmetry",
    "crates/fs-conform",
    "crates/fs-wedge",
    "crates/fs-robust",
    "crates/fs-benchmark",
    "crates/fs-epi-e2e",
    "crates/fs-asbuilt",
    "crates/fs-toleralloc",
    "crates/fs-assimilate",
    "crates/fs-diffreal-e2e",
    "crates/fs-voi",
    "crates/fs-fab",
    "crates/fs-tropical",
    "crates/fs-shapeprog",
    "crates/fs-couple",
    "crates/fs-lbm",
    "crates/fs-iga",
    "crates/fs-surrogate",
    "crates/fs-rep-neural",
    "crates/fs-render",
    "crates/fs-sos",
    "crates/fs-archive",
    "crates/fs-viz",
    "crates/fs-cutfem",
    "crates/fs-solid",
    "crates/fs-dwr",
    "crates/fs-topols",
    "crates/fs-fmm",
    "crates/fs-bem",
    "crates/fs-truss",
    "crates/fs-flux",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dicklesworthstone/frankensim"
authors = ["FrankenSim contributors"]

# Decalogue P1 as policy: the default for every crate is `deny(unsafe_code)`.
# Registered unsafe capsules (see docs/CONVENTIONS.md and the unsafe-capsule
# registry) opt out at the MODULE level with #[allow(unsafe_code)] plus a
# SAFETY.md; the xtask policy checker audits that every such module is listed.
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight numerical-kernel idioms; each is deliberate.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
many_single_char_names = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
# Deterministic-friendly, performance-honest defaults; changes to this profile
# must justify performance/determinism/cancellation tradeoffs (AGENTS.md).
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
