[workspace]
resolver = "3"
# tools/bootstrap is DELIBERATELY excluded: it is the pre-Cargo clean-machine
# entry point (bead 1t8i) and must build without resolving this workspace's
# sibling path dependencies.
exclude = ["tools/bootstrap"]
members = [
    "crates/fs-dd",
    "crates/fs-flywheel-e2e",
    "crates/fs-gen",
    "crates/fs-frame",
    "crates/fs-marquee",
    "crates/fs-selfknow-e2e",
    "crates/fs-propcheck",
    "crates/fs-casebook",
    "crates/fs-qty",
    "crates/fs-race",
    "crates/fs-obs",
    "crates/fs-opt",
    "crates/fs-ornith",
    "crates/fs-constraint",
    "crates/fs-query",
    "crates/fs-geocon",
    "crates/fs-topo",
    "crates/fs-recompute",
    "crates/fs-verify",
    "crates/fs-evidence",
    "crates/fs-substrate",
    "crates/fs-soa",
    "crates/fs-feec",
    "crates/fs-tilelang",
    "crates/fs-opdsl",
    "crates/fs-solver",
    "crates/fs-adjoint",
    "crates/fs-ascent",
    "crates/fs-topopt",
    "crates/fs-bo",
    "crates/fs-uq",
    "crates/fs-vessel",
    "crates/fs-tilelang-macros",
    "crates/fs-soa-derive",
    "crates/fs-time",
    "crates/fs-simd",
    "crates/fs-blake3",
    "crates/fs-alloc",
    "crates/fs-dfo",
    "crates/fs-exec",
    "crates/fs-math",
    "crates/fs-matdb",
    "crates/fs-thermochem",
    "crates/fs-la",
    "crates/fs-lattice",
    "crates/fs-sparse",
    "crates/fs-cheb",
    "crates/fs-fft",
    "crates/fs-ivl",
    "crates/fs-rand",
    "crates/fs-ad",
    "crates/fs-eproc",
    "crates/fs-ledger",
    "crates/fs-ir",
    "crates/fs-plan",
    "crates/fs-xform",
    "crates/fs-img",
    "crates/fs-io",
    "crates/fs-roofline",
    "crates/fs-geom",
    "crates/fs-ga",
    "crates/fs-scenario",
    "crates/fs-regime",
    "crates/fs-material",
    "crates/fs-session",
    "crates/fs-rep-nurbs",
    "crates/fs-rep-sdf",
    "crates/fs-rep-voxel",
    "crates/fs-rep-mesh",
    "crates/fs-rep-frep",
    "crates/fs-mesh",
    "crates/fs-motion",
    "crates/fs-contact",
    "crates/fs-vskeleton",
    "crates/fs-iface",
    "crates/fs-ladder",
    "crates/fs-probe",
    "crates/fs-govern",
    "crates/fs-spececo",
    "crates/fs-contract",
    "crates/fs-bisect",
    "crates/fs-dimine",
    "crates/fs-package",
    "crates/fs-checker",
    "crates/fs-crosswalk",
    "crates/fs-spectral",
    "crates/fs-symmetry",
    "crates/fs-conform",
    "crates/fs-detaudit",
    "crates/fs-mms",
    "crates/fs-wedge",
    "crates/fs-robust",
    "crates/fs-benchmark",
    "crates/fs-epi-e2e",
    "crates/fs-asbuilt",
    "crates/fs-toleralloc",
    "crates/fs-assimilate",
    "crates/fs-diffreal-e2e",
    "crates/fs-voi",
    "crates/fs-fab",
    "crates/fs-tropical",
    "crates/fs-shapeprog",
    "crates/fs-couple",
    "crates/fs-lbm",
    "crates/fs-iga",
    "crates/fs-surrogate",
    "crates/fs-rep-neural",
    "crates/fs-render",
    "crates/fs-sos",
    "crates/fs-archive",
    "crates/fs-viz",
    "crates/fs-report",
    "crates/fs-vpm",
    "crates/fs-cutfem",
    "crates/fs-solid",
    "crates/fs-dwr",
    "crates/fs-topols",
    "crates/fs-fmm",
    "crates/fs-bem",
    "crates/fs-truss",
    "crates/fs-flux",
    "crates/fs-thrust-e2e",
    "crates/fs-robustopt-e2e",
    "crates/fs-schedule-e2e",
    "crates/fs-flutter-e2e",
    "crates/fs-neuroshape-e2e",
    "crates/fs-grammar-e2e",
    "crates/fs-oed-e2e",
    "crates/fs-metamat-e2e",
    "crates/fs-truss-e2e",
    "crates/fs-adaptbo-e2e",
    "crates/fs-flagship-e2e",
    "crates/fs-flowcert-e2e",
    "crates/fs-vvreg",
    "crates/fs-vmanifest",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dicklesworthstone/frankensim"
authors = ["FrankenSim contributors"]

# FrankenSQLite declares its runtime dependency through crates.io so it remains
# independently publishable. Inside this constellation, force that dependency
# to the same pinned sibling used directly by fs-* crates. A missing sibling is
# therefore a resolution error rather than a silent second runtime identity;
# `xtask check-constellation` verifies the sibling's exact locked git head.
[patch.crates-io]
asupersync = { path = "../asupersync" }

# Decalogue P1 as policy: the default for every crate is `deny(unsafe_code)`.
# Registered unsafe capsules (see docs/CONVENTIONS.md and the unsafe-capsule
# registry) opt out at the MODULE level with #[allow(unsafe_code)] plus a
# SAFETY.md; the xtask policy checker audits that every such module is listed.
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight numerical-kernel idioms; each is deliberate.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
many_single_char_names = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
# Deterministic-friendly, performance-honest defaults; changes to this profile
# must justify performance/determinism/cancellation tradeoffs (AGENTS.md).
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
