[package]
name = "xtask"
version = "0.0.1"
edition = "2024"
publish = false
description = "FrankenSim repository policy checks: layer discipline, dependency policy, contract presence."

[package.metadata.frankensim]
layer = "TOOL"

[dependencies]
fs-blake3 = { path = "../crates/fs-blake3" }

[lints]
workspace = true
