[package]
name = "fs-adjoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Gradient truth: IFT discrete adjoints through solvers, time-dependent adjoints under revolve checkpointing, Hadamard shape gradients, density chain rules, Sobolev gradient smoothing, and the gradient-verification gate."

[package.metadata.frankensim]
layer = "L3"

[dependencies]
fs-ad = { path = "../fs-ad" }
fs-evidence = { path = "../fs-evidence" }
fs-feec = { path = "../fs-feec" }
fs-geom = { path = "../fs-geom" }
fs-ivl = { path = "../fs-ivl" }
fs-la = { path = "../fs-la" }
fs-math = { path = "../fs-math" }
fs-rep-mesh = { path = "../fs-rep-mesh" }
fs-solver = { path = "../fs-solver" }
fs-sparse = { path = "../fs-sparse" }

[features]
# [F]-gated per the Ambition-Tag rule: the ledger-DAG transposition
# layer ships disabled until its Gauntlet tier + kill metric are green.
ledger-transpose = []
# [F]-gated: the non-differentiable meshing mitigations (routing term,
# Hadamard path, estimated+flag downgrade).
diff-mitigations = ["ledger-transpose"]
# [S]: gradient certificates (colors + interval residual bounds + the
# FD-falsifier merge gate).
gradient-certs = ["diff-mitigations"]

[dev-dependencies]
fs-ledger = { path = "../fs-ledger" }
fs-rand = { path = "../fs-rand" }

[lints]
workspace = true
