[package]
name = "fs-adjoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Gradient truth: IFT discrete adjoints through solvers, time-dependent adjoints under revolve checkpointing, Hadamard shape gradients, density chain rules, Sobolev gradient smoothing, and the gradient-verification gate."

[package.metadata.frankensim]
layer = "L3"

[dependencies]
fs-ad = { path = "../fs-ad" }
fs-blake3 = { path = "../fs-blake3" }
fs-evidence = { path = "../fs-evidence" }
fs-exec = { path = "../fs-exec" }
fs-feec = { path = "../fs-feec" }
fs-geom = { path = "../fs-geom" }
fs-ivl = { path = "../fs-ivl" }
fs-la = { path = "../fs-la" }
fs-math = { path = "../fs-math" }
fs-rep-mesh = { path = "../fs-rep-mesh" }
fs-solver = { path = "../fs-solver" }
fs-verify = { path = "../fs-verify", features = ["certified-speculation"], optional = true }
fs-sparse = { path = "../fs-sparse" }

[features]
# [F]-gated per the Ambition-Tag rule (bead knh1.5, Proposal B).
explanation-objects = []
# [F]-gated per the Ambition-Tag rule: the ledger-DAG transposition
# layer ships disabled until its Gauntlet tier + kill metric are green.
ledger-transpose = []
# [F]-gated: the non-differentiable meshing mitigations (routing term,
# Hadamard path, estimated+flag downgrade).
diff-mitigations = ["ledger-transpose"]
# [S]: gradient certificates (colors + interval residual bounds + the
# FD-falsifier merge gate).
gradient-certs = ["diff-mitigations"]
# [F]: the DWR goal-oriented accept test (estimated unless
# equilibrated-bracketed).
dwr-accept = ["dep:fs-verify"]

[dev-dependencies]
fs-alloc = { path = "../fs-alloc" }
fs-ledger = { path = "../fs-ledger" }
fs-rand = { path = "../fs-rand" }

[lints]
workspace = true

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "certs"
required-features = ["gradient-certs"]

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "dwr_accept"
required-features = ["dwr-accept"]

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "explain"
required-features = ["explanation-objects"]

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "mitigate"
required-features = ["diff-mitigations"]

# Feature-gated integration target (huq.18): skipped-with-reason when the
# feature is off, never a zero-test pass.
[[test]]
name = "transpose"
required-features = ["ledger-transpose"]
