[package]
name = "fs-alloc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Scope arenas with O(1) cancel reclaim, 128-byte alignment, hugepages, pools."

[package.metadata.frankensim]
layer = "L0"

[dependencies]

[dev-dependencies]

[lints]
workspace = true
