[package]
name = "fs-assimilate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Data assimilation: checked linear-Gaussian belief updates from instrument observations, with registration-free point sensors and honestly estimated, content-addressed posterior candidates for external validation."

[package.metadata.frankensim]
layer = "L4"

[dependencies]
fs-blake3 = { path = "../fs-blake3" }
fs-evidence = { path = "../fs-evidence" }

[dev-dependencies]

[lints]
workspace = true
