[package]
name = "fs-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fail-closed wedge benchmark corpus with admitted reference colors, typed evaluator schemas, and canonical evidence identities."

[package.metadata.frankensim]
layer = "UTIL"

[dependencies]
fs-blake3 = { path = "../fs-blake3" }
fs-evidence = { path = "../fs-evidence" }

[dev-dependencies]

[lints]
workspace = true
