[package]
name = "fs-dwr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Dual-weighted-residual goal-oriented adaptivity: enriched-adjoint DWR estimates, Doerfler marking, octree h-refinement loops, anisotropic metric synthesis, wavelet tile thresholding, h-vs-p decision signals."

[package.metadata.frankensim]
layer = "L3"

[dependencies]
fs-cutfem = { path = "../fs-cutfem" }

[dev-dependencies]
fs-ivl = { path = "../fs-ivl" }
fs-material = { path = "../fs-material" }

[lints]
workspace = true
