[package]
name = "fs-epi-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Epistemic type-system end-to-end suite: a runnable Layer-2 battery for laundering refusal, falsifier-catalog linting and diagnostic budget allocation, Goodhart guards, objective epistemics, and evidence-package round trips, with structured per-stage logging."

[package.metadata.frankensim]
layer = "L6"

[dependencies]
fs-evidence = { path = "../fs-evidence" }
fs-opt = { path = "../fs-opt" }
fs-robust = { path = "../fs-robust" }
fs-package = { path = "../fs-package" }
fs-checker = { path = "../fs-checker" }

[dev-dependencies]

[lints]
workspace = true
