[package]
name = "fs-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Two-lane executor: latency lane on asupersync, work-stealing tile lane, Cx contract."

[package.metadata.frankensim]
layer = "L0"

[dependencies]

[dev-dependencies]

[lints]
workspace = true
