[package]
name = "fs-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Two-lane executor: latency lane on asupersync, work-stealing tile lane, Cx contract."

[package.metadata.frankensim]
layer = "L0"

[dependencies]
asupersync = { path = "../../../asupersync" }
fs-alloc = { path = "../fs-alloc" }
fs-obs = { path = "../fs-obs" }
fs-substrate = { path = "../fs-substrate" }

[dev-dependencies]

[lints]
workspace = true
